# shorts

./: Cargo.toml  schema.sql
src/: agent.rs  db.rs  main.rs  users.rs  views.rs
static/: index.css
templates/: base.html.tera  index.html.tera
